--- a/index.html
+++ b/index.html
@@ -99,7 +99,66 @@
         </div>
       </div>
     </section>
+    <!-- foto model -->
+    <section style="margin-top: 50px">
+      <div class="ml-136 row" style="margin-top: 30px">
+        <div class="col-12 col-lg-12 col-xl-6">
+          <img src="./assets/img/img_service.png" alt="" class="img-service" />
+        </div>
+        <div class="col-12 col-lg-12 col-xl-6 service-banner-text">
+          <h2 class="heading-service">
+            Best Car Rental for any kind of trip in (Lokasimu)!
+          </h2>
+          <p class="text-service">
+            Sewa mobil di (Lokasimu) bersama Binar Car Rental jaminan harga
+            lebih murah dibandingkan yang lain, kondisi mobil baru, serta
+            kualitas pelayanan terbaik untuk perjalanan wisata, bisnis, wedding,
+            meeting, dll.
+          </p>
 
+          <ul class="text-service">
+            <li class="list" style="margin-top: 10px">
+              <div class="check" style="margin-right: 10px">
+                <img src="./assets/img/check.png" alt="" style="width: 20px" />
+              </div>
+              <p style="margin-bottom: 0">
+                Sewa Mobil Dengan Supir di Bali 12 Jam
+              </p>
+            </li>
+            <li class="list" style="margin-top: 10px">
+              <div class="check" style="margin-right: 10px">
+                <img src="./assets/img/check.png" alt="" style="width: 20px" />
+              </div>
+              <p style="margin-bottom: 0">
+                Sewa Mobil Lepas Kunci di Bali 24 Jam
+              </p>
+            </li>
+            <li class="list" style="margin-top: 10px">
+              <div class="check" style="margin-right: 10px">
+                <img src="./assets/img/check.png" alt="" style="width: 20px" />
+              </div>
+              <p style="margin-bottom: 0">Sewa Mobil Jangka Panjang Bulanan</p>
+            </li>
+            <li class="list" style="margin-top: 10px">
+              <div class="check" style="margin-right: 10px">
+                <img src="./assets/img/check.png" alt="" style="width: 20px" />
+              </div>
+              <p style="margin-bottom: 0">
+                Gratis Antar - Jemput Mobil di Bandara
+              </p>
+            </li>
+            <li class="list" style="margin-top: 10px">
+              <div class="check" style="margin-right: 10px">
+                <img src="./assets/img/check.png" alt="" style="width: 20px" />
+              </div>
+              <p style="margin-bottom: 0">
+                Layanan Airport Transfer / Drop In Out
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <!-- JS -->
     <script src="https://unpkg.com/feather-icons"></script>
     <script
@@ -123,5 +182,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
