Pengerjaan Why US
Mengerjakan Why Us dan melakukan polishing yang lain

--- a/index.html
+++ b/index.html
@@ -159,6 +159,211 @@
         </div>
       </div>
     </section>
+    <!-- Why US -->
+    <section>
+      <div class="ml-136">
+        <div>
+          <h1 class="heading-service" class="">Why Us?</h1>
+          <p class="text-service">Mengapa harus pilih Binar Car Rental?</p>
+        </div>
+        <div>
+          <div class="row p-5">
+            <div class="col-12 col-md-6 col-lg-3 mt-3">
+              <div class="card">
+                <div class="card-body rounded">
+                  <img
+                    src="./assets/img/icon_thumbs.png"
+                    alt=""
+                    style="width: 32px"
+                  />
+                  <h5
+                    class="card-title mt-3 mb-3"
+                    style="font-size: 16px; font-weight: bold"
+                  >
+                    Mobil Lengkap
+                  </h5>
+                  <p class="card-text">
+                    Tersedia banyak pilihan mobil, kondisi masih baru, bersih
+                    dan terawat
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mt-3">
+              <div class="card">
+                <div class="card-body rounded">
+                  <img
+                    src="./assets/img/icon_price.png"
+                    alt=""
+                    style="width: 32px"
+                  />
+                  <h5
+                    class="card-title mt-3 mb-3"
+                    style="font-size: 16px; font-weight: bold"
+                  >
+                    Mobil Lengkap
+                  </h5>
+                  <p class="card-text">
+                    Tersedia banyak pilihan mobil, kondisi masih baru, bersih
+                    dan terawat
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mt-3">
+              <div class="card">
+                <div class="card-body rounded">
+                  <img
+                    src="./assets/img/icon_24hrs.png"
+                    alt=""
+                    style="width: 32px"
+                  />
+                  <h5
+                    class="card-title mt-3 mb-3"
+                    style="font-size: 16px; font-weight: bold"
+                  >
+                    Mobil Lengkap
+                  </h5>
+                  <p class="card-text">
+                    Tersedia banyak pilihan mobil, kondisi masih baru, bersih
+                    dan terawat
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 mt-3">
+              <div class="card">
+                <div class="card-body rounded">
+                  <img
+                    src="./assets/img/icon_professional.png"
+                    alt=""
+                    style="width: 32px"
+                  />
+                  <h5
+                    class="card-title mt-3 mb-3"
+                    style="font-size: 16px; font-weight: bold"
+                  >
+                    Mobil Lengkap
+                  </h5>
+                  <p class="card-text">
+                    Tersedia banyak pilihan mobil, kondisi masih baru, bersih
+                    dan terawat
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+      <!-- If we need navigation buttons -->
+      <div class="d-none d-md-flex" style="width: fit-content; margin: 0 auto">
+        <div
+          class="prev me-2 d-flex justify-content-center align-items-center"
+          style="
+            height: 2rem;
+            width: 2rem;
+            border: 1px solid #c4c4c4;
+            border-radius: 100%;
+          "
+        >
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12.5 15L7.5 10L12.5 5"
+              stroke="#222222"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </div>
+        <div
+          class="next me-2 d-flex justify-content-center align-items-center"
+          style="
+            height: 2rem;
+            width: 2rem;
+            border: 1px solid #c4c4c4;
+            border-radius: 100%;
+          "
+        >
+          <svg
+            width="8"
+            height="12"
+            viewBox="0 0 8 12"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M1.5 11L6.5 6L1.5 1"
+              stroke="#222222"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </div>
+      </div>
+    </section>
+
+    <!-- Biru mulai sewa mobil -->
+    <section class="container-xl mb-5 mt-5 mx-136 px-2">
+      <div
+        class="mb-5 px-1 px-md-0"
+        style="
+          background: #0d28a6;
+          color: white;
+          height: 20.375rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          border-radius: 13px;
+          text-align: center;
+        "
+      >
+        <h1 class="mb-4" style="font-size: 2rem; font-weight: bold">
+          Sewa Mobilmu di (Lokasimu) Sekarang
+        </h1>
+        <p
+          class="mb-5"
+          style="font-size: 0.875rem; max-width: 30rem; text-align: center"
+        >
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+          laboriosam molestiae corrupti atque odit quos magni sunt, eos
+          officiis?
+        </p>
+        <a
+          class="btn-green"
+          href=""
+          style="
+            color: white;
+            background: #5cb85f;
+            border-radius: 2px;
+            padding: 0.5rem 0.75rem;
+            font-size: 0.875rem;
+          "
+          >Mulai Sewa Mobil</a
+        >
+      </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <div class="row">
+        <div class="row">
+          <p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
+          <p>binarcarrental@gmail.com</p>
+          <p>081-233-334-808</p>
+        </div>
+      </div>
+    </footer>
     <!-- JS -->
     <script src="https://unpkg.com/feather-icons"></script>
     <script
