Membuat Carousel Testimoni
Membuat carousel testimoni dengan menggunakan swiperjs

--- a/index.html
+++ b/index.html
@@ -256,7 +256,205 @@
         </div>
       </div>
     </section>
-
+    <!-- Carousel testi -->
+    <section class="py-5" id="testimonial-section">
+      <h2
+        style="
+          font-weight: bold;
+          font-size: 2rem;
+          margin-bottom: 1rem;
+          border-radius: 4px;
+          text-align: center;
+        "
+      >
+        Testimonial
+      </h2>
+      <p style="text-align: center; font-size: 0.875rem">
+        Berbagai review positif dari pelanggan kami
+      </p>
+      <div class="swiper" style="position: relative">
+        <!-- Additional required wrapper -->
+        <div class="swiper-wrapper">
+          <!-- Slides -->
+          <div
+            class="swiper-slide d-md-flex justify-content-between align-items-center py-3 px-5"
+            style="
+              box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+              border-radius: 8px;
+              background: #e3e9ff;
+              min-height: 16.875rem;
+            "
+          >
+            <img
+              class="d-block mx-auto me-md-5"
+              src="./assets/img/cewek.png"
+              alt="testimoni photo"
+              style="width: 80px"
+            />
+            <div>
+              <div
+                class="mb-3 mt-3 d-flex justify-content-center justify-content-md-start"
+              >
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+              </div>
+              <p style="font-size: 0.875rem">
+                <br />
+                "Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                <br />
+                Mollitia facere officiis eligendi optio maiores atque officia
+                tenetur blanditiis iste, ex dicta tempora sunt, <br />
+                saepe commodi voluptatem. Atque consectetur laudantium impedit
+                aliquid! Voluptates, veniam!"
+              </p>
+              <p style="font-size: 0.875rem; font-weight: 500">
+                John Dee 32, Bromo
+              </p>
+            </div>
+          </div>
+          <div
+            class="swiper-slide d-md-flex justify-content-between align-items-center py-3 px-5"
+            style="
+              box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+              border-radius: 8px;
+              background: #e3e9ff;
+              min-height: 16.875rem;
+            "
+          >
+            <img
+              class="d-block mx-auto me-md-5"
+              src="./assets/img/cowok.png"
+              alt="testimoni photo"
+              style="width: 80px"
+            />
+            <div>
+              <div
+                class="mb-3 mt-3 d-flex justify-content-center justify-content-md-start"
+              >
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+              </div>
+              <p style="font-size: 0.875rem">
+                <br />
+                "Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                <br />
+                Mollitia facere officiis eligendi optio maiores atque officia
+                tenetur blanditiis iste, ex dicta tempora sunt, <br />
+                saepe commodi voluptatem. Atque consectetur laudantium impedit
+                aliquid! Voluptates, veniam!"
+              </p>
+              <p style="font-size: 0.875rem; font-weight: 500">
+                John Dee 32, Bromo
+              </p>
+            </div>
+          </div>
+          <div
+            class="swiper-slide d-md-flex justify-content-between align-items-center py-3 px-5"
+            style="
+              box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
+              border-radius: 8px;
+              background: #e3e9ff;
+              min-height: 16.875rem;
+            "
+          >
+            <img
+              class="d-block mx-auto me-md-5"
+              src="./assets/img/cowok.png "
+              alt="testimoni photo"
+              style="width: 80px"
+            />
+            <div>
+              <div
+                class="mb-3 mt-3 d-flex justify-content-center justify-content-md-start"
+              >
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+                <img
+                  src="./assets/img/Star-5.png"
+                  alt=""
+                  style="height: 1rem"
+                />
+              </div>
+              <p style="font-size: 0.875rem">
+                <br />
+                "Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                <br />
+                Mollitia facere officiis eligendi optio maiores atque officia
+                tenetur blanditiis iste, ex dicta tempora sunt, <br />
+                saepe commodi voluptatem. Atque consectetur laudantium impedit
+                aliquid! Voluptates, veniam!"
+              </p>
+              <p style="font-size: 0.875rem; font-weight: 500">
+                John Dee 32, Bromo
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- If we need navigation buttons -->
       <div class="d-none d-md-flex" style="width: fit-content; margin: 0 auto">
         <div
@@ -312,58 +510,7 @@
       </div>
     </section>
 
-    <!-- Biru mulai sewa mobil -->
-    <section class="container-xl mb-5 mt-5 mx-136 px-2">
-      <div
-        class="mb-5 px-1 px-md-0"
-        style="
-          background: #0d28a6;
-          color: white;
-          height: 20.375rem;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          border-radius: 13px;
-          text-align: center;
-        "
-      >
-        <h1 class="mb-4" style="font-size: 2rem; font-weight: bold">
-          Sewa Mobilmu di (Lokasimu) Sekarang
-        </h1>
-        <p
-          class="mb-5"
-          style="font-size: 0.875rem; max-width: 30rem; text-align: center"
-        >
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
-          laboriosam molestiae corrupti atque odit quos magni sunt, eos
-          officiis?
-        </p>
-        <a
-          class="btn-green"
-          href=""
-          style="
-            color: white;
-            background: #5cb85f;
-            border-radius: 2px;
-            padding: 0.5rem 0.75rem;
-            font-size: 0.875rem;
-          "
-          >Mulai Sewa Mobil</a
-        >
-      </div>
-    </section>
 
-    <!-- footer -->
-    <footer>
-      <div class="row">
-        <div class="row">
-          <p>Jalan Suroyo No. 161 Mayangan Kota Probolonggo 672000</p>
-          <p>binarcarrental@gmail.com</p>
-          <p>081-233-334-808</p>
-        </div>
-      </div>
-    </footer>
     <!-- JS -->
     <script src="https://unpkg.com/feather-icons"></script>
     <script
