--- a/index.html
+++ b/index.html
@@ -510,7 +510,47 @@
       </div>
     </section>
 
-
+    <!-- Biru mulai sewa mobil -->
+    <section class="container-xl mb-5 mt-5 mx-136 px-2">
+      <div
+        class="mb-5 px-1 px-md-0"
+        style="
+          background: #0d28a6;
+          color: white;
+          height: 20.375rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          border-radius: 13px;
+          text-align: center;
+        "
+      >
+        <h1 class="mb-4" style="font-size: 2rem; font-weight: bold">
+          Sewa Mobilmu di (Lokasimu) Sekarang
+        </h1>
+        <p
+          class="mb-5"
+          style="font-size: 0.875rem; max-width: 30rem; text-align: center"
+        >
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus
+          laboriosam molestiae corrupti atque odit quos magni sunt, eos
+          officiis?
+        </p>
+        <a
+          class="btn-green"
+          href=""
+          style="
+            color: white;
+            background: #5cb85f;
+            border-radius: 2px;
+            padding: 0.5rem 0.75rem;
+            font-size: 0.875rem;
+          "
+          >Mulai Sewa Mobil</a
+        >
+      </div>
+    </section>
     <!-- JS -->
     <script src="https://unpkg.com/feather-icons"></script>
     <script
